# GameEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  glad.c  main.cpp  main.cppm
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
Release/: GameEngine.exp
_ReSharper.Caches/Rider233.GameEngine.00/Db/: 008071.ldb  008072.ldb  008073.ldb  008074.ldb  008075.ldb  008076.ldb  008078.ldb  008079.ldb  008080.ldb  008085.ldb
deprecated/: main
desperate/: math-abandoned.txt  pixmap.java
doc-export/: TodoList.md
include/: ik_irrKlangTypes.h  irrKlang.h
include/GLFW/: glfw3.h  glfw3native.h
include/glad/: glad.h
include/native/stbi/: stbi_image.h
lib/: freetype.lib
modules/: modules.json  std.ixx
properties/resource/: attribTest.cppm  test.json
properties/resource/assets/: palette.css  test.txt
properties/resource/assets/bundles/: bundle.def.json  bundle.zh_cn.json  ui.def.json
properties/resource/assets/hitbox/: pester.hitbox  target.txt
properties/resource/assets/shader/: blit.frag  blit.vert  bloom.frag  coordinate-axis.frag  filter.frag  merge.frag  (+13 more)
raw-assets/: Doxyfile  bar-circle-24.psd  elem-s1-edge.psd
resource/RAW/: bottom1-back.ase
resource/assets/: test.txt
resource/assets/shader/: blit.frag  blit.vert  bloom.frag  coordinate-axis.frag  coordinate-axis.vert  filter.frag  filter.vert  gaussian-blur.frag  gaussian-blur.vert  screenspace.frag  screenspace.vert  slide-line.frag  std.frag  std.vert  tex-std.frag  threshold.frag
src/: ApplicationLauncher.cppm  SideTemp.cppm  Test.cppm  api_def.hpp  application_head.h
src/arc/: ApplicationLauncher.cppm  Core.cppm  Event.cppm  Platform.cppm
src/arc-impl/: ApplicationListenerSetter.cpp  AssetsLoader.cpp  AssetsManager.cpp  Assets_Dir.cpp  Assets_Graphic.cpp  Core.cpp  Effect.cpp  Effects.cpp  Elem.cpp  ElemDrawer.cpp  Font.cpp  GlyphArrangement.cpp  Group.cpp  Label.cpp  MainLoopManager.cpp  OS.cpp  PlatformSpec.cpp  Root.cpp  RuntimeException.cpp  ScrollPane.cpp  Table.cpp  TextureNineRegion.cpp  lunasvg_interface.cpp
src/arc-impl/graphic/: Draw.cpp  General.cpp  Renderer.cpp  Shader.cpp  Trail.cpp  WorldDraw.cpp
src/arc-impl/ui/: Actions.cpp  Cell.cpp  ControlBindTable.cpp  Creation.cpp  Dialog.cpp  Drawer.cpp  Elem.cpp  Group.cpp  HoverTableManager.cpp  ImageRegion.cpp  InputArea.cpp  Label.cpp  ProgressBar.cpp  RegionDrawable.cpp  Root.cpp  Scene.cpp  Screen.cpp  ScrollPane.cpp  SliderBar.cpp  Table.cpp  TextWidget.cpp  TooltipManager.cpp  Viewport.cpp  Widget.cpp
src/arc/asset/: Assets.cppm  AssetsLoader.cpp  AssetsLoader.cppm  AssetsManager.cpp  AssetsManager.cppm  AssetsMiscLoader.cppm  Assets_Ctrl.cppm  Assets_Dir.cppm  Assets_Graphic.cppm  Assets_Sound.cppm  Bundle.cppm  LegacyAssetsLoader.cppm  LegacyTexturePacker.cppm  LoaderRenderer.cppm  TexturePacker.cppm
src/arc/async/: AsyncHandle.cppm  AsyncManager.cppm  TaskQueue.cppm
src/arc/audio/: Audio.cppm  SoundLoader.cppm
src/arc/container/: ContinuousPool.cppm  Map2D.cppm  Pool.cppm  TileMap.cppm
src/arc/core/: ApplicationTimer.cppm  Core.cppm  CoreUtil.cppm  Global.cppm  MainLoopManager.cppm  Unit.cppm
src/arc/extension/: Async.cppm  HeterogeneousLookup.cppm  NativeUtil.cppm  RuntimeException.cpp  RuntimeException.cppm  StackTrace.cppm
src/arc/graphic/: Camera.cppm  Camera2D.cppm  Color.cppm  Draw.cppm  DrawMask.cppm  Graphic.cppm  Pixmap.cppm  RenderableMesh.cppm  Renderer.cppm  RendererImpl.cppm  Resizeable.cppm  TextureAtlas.cppm  Timed.cppm  Trail.cppm
src/arc/io/: BinaryIO.cppm  File.cppm  FileTree.cppm  GeneralIO.cppm  Image.h  JsonIO.cppm  Log.cppm  Serializable.cppm  Settings.cppm  SpecializedIO.cppm
src/arc/math/: BitConvert.cppm  Interpolation.cppm  Math.cppm  Rand.cppm  SinTable.cppm  Timed.cppm
src/arc/meta-programming/: Concepts.cppm  GeneralTMP.cppm  TypeTraits.cppm
src/arc/os/: ApplicationListener.cppm  ApplicationListenerSetter.cppm  GlobalTaskQueue.cppm  Handler.cppm  OS.cppm  User.cppm
src/arc/platform/: PlatformHandle.cppm  PlatformUtil.cppm  Platform_Current.cppm
src/arc/protocol/: Concepts.cppm
src/arc/ui/: Align.cppm  Drawer.cppm  Elem.cppm  ElemDrawer.cpp  ElemDrawer.cppm  Flags.cppm  Format.cppm  GlyphArrangement.cppm  HoverTableManager.cppm  InteractListeners.cppm  LayoutableGroup.cppm  Palette.cppm  Root.cppm  Scl.cppm  Selection.cppm  SeperateDrawable.cppm  Stage.cppm  Style.cppm  Styles.cppm  Table.cppm  TooltipManager.cppm  UIRoot.cppm
src/arc/util/: Algorithm.cppm  Async.cppm  Base64.cppm  BoolOp.cppm  Encoding.cppm  Guard.cppm  Interval.cppm  Json.cppm  Owner.cppm  ReflTest.cppm  ReflectionUtil.hpp  StaticReflection.cppm  StringParse.cppm  TimeMark.cppm  Timer.cppm  TreeStructure.cppm
src/code-gen/: ReflectData.cppm  ReflectData_Builtin.hpp  SpecIO.cppm
src/ext/: Algorithm.cppm  Async.cppm  BoolOp.cppm  Concepts.cppm  DynamicBuffer.cppm  Encoding.cppm  Event.cppm  GeneralTMP.cppm  Guard.cppm  HeterogeneousLookup.cppm  Json.cppm  JsonIO.cppm  ReflectionUtil.hpp  SnapShot.cppm  StaticReflection.cppm  StringParse.cppm  TimeMark.cppm  Timer.cppm  WeakRef.cppm
src/ext/container/: Map2D.cppm  ObjectPool.cppm  ObjectPoolGroup.cppm
src/game/: GameCore.cppm
src/game-impl/: Collision.cpp  Controller.cpp  Effect_ManagerProvide.cpp  EntityMap.cpp  PlayerController.cpp  RemoveCallable.cpp  TurretEntity.cpp
src/game-impl/ui/: MainMenu.cpp
src/game/chamber/: Chamber.cppm  ChamberFrame.cppm  ChamberFrameTrans.cppm  ChamberGrid.cppm  ChamberGridTrans.cppm  ChamberUtil.cppm
src/game/content/: Content.cppm  ContentLoader.cppm  ContentTrait.cppm  Factions.cppm  Loadable.cppm
src/game/entity/: DrawMap.cppm  EntityManager.cppm  EntityMap.cppm  RemoveCallalble.cppm
src/game/graphic/: CombinePostProcessor.cppm  GameDraw.cppm
src/game/logic/: GameRenderer.cppm  Groups.cppm
src/game/runtime/: Delay.cppm
src/game/ui/: HitBoxEditor.cppm  HitBoxEditorLegacy.cppm  OverlayInterface.cppm  OverlayManager.cppm  OverlayRenderer.cppm
src/game/util/: Faction.cppm  Pools.cppm  TileMap.cppm
src/game/world/: GlobalMap.cppm  RegionMap.cppm
(+237 files in other folders)
